[package]
name = "py-slpprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "slp_process"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.31.1", features = ["dtype-struct", "lazy"] }
pyo3 = { version = "0.19.1", features = ["extension-module"] }
pyo3-polars = "0.5.0"
slpprocess = { path = "../slpprocess" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
