[package]
name = "py-slpprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "slp_process"
crate-type = ["cdylib"]

[dependencies]
# polars = { version = "0.34.2", features = ["dtype-struct", "lazy"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-polars = { git = "https://github.com/pola-rs/pyo3-polars.git", rev = "04df15847f269cd43cb1bc0af925bf5dec076769" }
slpprocess = { path = "../slpprocess" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssbm_utils = { path = "../ssbm-utils" }
