[package]
name = "py_slp_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_slp_parse"
crate-type = ["cdylib"]

[dependencies]
# polars = { version = "0.34.2", features = ["dtype-struct", "lazy"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-polars = "0.11.3"
slp_parse = { path = "../slp_parse", features = ["polars"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssbm_utils = { path = "../ssbm_utils" }
