[package]
edition = "2021"
name = "py_slp_parse"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "py_slp_parse"

[dependencies]
# polars = { version = "0.34.2", features = ["dtype-struct", "lazy"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-polars = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slp_parse = { path = "../slp_parse", features = ["polars"] }
ssbm_utils = { path = "../ssbm_utils" }
