[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "py_slp_parse"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
# Build artifacts with the specified Cargo profile
profile = "release"
