[package]
name = "slp_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slp_parse = { path = "../slp_parse" }
duckdb = {version = "0.10", features = ["bundled", "parquet"]}
time = {version = "0.3.30", features = ["serde", "parsing", "local-offset"]}
