[package]
name = "slp_parse"
authors = ["Walnut356"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Walnut356/SlpProcess"
readme = "./README.md"
license = "Apache-2.0"
description = "A Slippi replay file parser for stats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
polars = ["dep:polars"]


[dependencies]
polars = { version = "0.38", features = [
    "lazy",
    "dtype-u16",
    "dtype-u8",
    "dtype-i8",
    "dtype-struct",
    "dtype-datetime",
    "dtype-duration",
    "rows",
    "mode",
    "is_in",
    "list_count",
], optional = true }
byteorder = "1.4.3"
nohash-hasher = "0.2.0"
rayon = "1.7.0"
bytemuck = "1.13.1"
anyhow = "1.0.72"
# bytes =  "1.4.0"
# slightly optimized fork of bytes with less dead code and possibly better performance characteristics for contiguous memory.
bytes = { git = "https://github.com/Walnut356/bytes.git", branch = "bytes_get" }
encoding_rs = "0.8.32"
serde = "1.0.188"
serde_json = "1.0.104"
thiserror = "1.0.44"
strum = "0.26.1"
strum_macros = "0.26.1"
itertools = "0.12.0"
ssbm_utils = { path = "../ssbm_utils" }
derive-new = "0.6.0"
time = { version = "0.3.30", features = ["serde", "parsing", "local-offset"] }

[profile.release.package."polars"]
version = "0.38"
features = [
    "lazy",
    "dtype-u16",
    "dtype-u8",
    "dtype-i8",
    "dtype-struct",
    "dtype-datetime",
    "dtype-duration",
    "rows",
    "mode",
    "is_in",
    "list_count",
    "performant",
]
optional = true

[profile.release-with-debug]
inherits = "release"
debug = true
