[package]
name = "slpprocess"
authors = ["Walnut356"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Walnut356/SlpProcess"
readme = "./README.md"
license = "MIT"
description = "A Slippi replay file parser for stats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.34.2", features = [
    "lazy",
    "dtype-u16",
    "dtype-u8",
    "dtype-i8",
    "dtype-struct",
    "dtype-datetime",
    "dtype-duration",
    "parquet",
] }
byteorder = "1.4.3"
num_enum = "0.7.0"
nohash-hasher = "0.2.0"
rayon = "1.7.0"
bytemuck = "1.13.1"
anyhow = "1.0.72"
rand = "0.8.5"
bytes = "1.4.0"
encoding_rs = "0.8.32"
serde = "1.0.188"
serde_json = "1.0.104"
minstant = "0.1.2"
thiserror = "1.0.44"
strum = "0.25.0"
strum_macros = "0.25.2"
itertools = "0.11.0"
circular-queue = "0.2.6"
num-traits = "0.2.16"
lazy_static = "1.4.0"
ssbm_utils = { path = "../ssbm-utils" }
derive-new = "0.5.9"
parking_lot = "0.12.1"
arc-swap = "1.6.0"