[package]
name = "ssbm_utils"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Walnut356/SlpProcess"
readme = "./README.md"
license = "MIT"
description = "A collection of useful tools for working with data from Super Smash Bros Melee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.1"
num_enum = "0.7.0"
approx = "0.5.1"
num-traits = "0.2.16"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
