[package]
name = "ssbm_utils"
version = "0.3.3"
edition = "2021"
repository = "https://github.com/Walnut356/SlpProcess"
readme = "./README.md"
license = "MIT"
description = "A collection of useful tools for working with data from Super Smash Bros Melee"
exclude = ["ReleaseHistory.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.26.1"
strum_macros = "0.26.1"
approx = "0.5.1"
num-traits = "0.2.16"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
